gstd/codegen/tests/ui/signal_doesnt_work_with_gearexe.stderr
error: `handle_signal` is forbidden with `gearexe` feature on
 --> tests/ui/signal_doesnt_work_with_gearexe.rs:3:1
  |
3 | #[gstd::async_main(handle_signal = custom_handle_signal)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `gstd::async_main` (in Nightly builds, run with -Z macro-backtrace for more info)
